[package]
name = "polyglot-name-finder"
version = "0.1.0"
edition = "2021"
description = "Helps find a name that is a word in multiple languages."
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidecode = "0.3.0"